# feos

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.bib  Cargo.toml  README.md  docs-header.html  genindex.html  help_and_feedback.html  index.html  installation.html  license-apache  license-mit  objects.inv  pyproject.toml  rust_api.html  search.html  searchindex.js
api/: ad.html  (+20 more)
crates/feos/: Cargo.toml  TASKS.md
crates/feos-ad/: CHANGELOG.md  Cargo.toml  README.md
crates/feos-ad/src/: lib.rs
crates/feos-ad/src/core/: mod.rs  phase_equilibria.rs  residual.rs  state.rs  total.rs
crates/feos-ad/src/eos/: gc_pcsaft.rs  ideal_gas.rs  mod.rs
crates/feos-ad/src/parameter_fit/: mod.rs  parallel.rs
crates/feos-core/: CHANGELOG.md  Cargo.toml  README.md  license-apache
crates/feos-core/src/: cubic.rs  density_iteration.rs  errors.rs  lib.rs
crates/feos-core/src/ad/: mod.rs
crates/feos-core/src/equation_of_state/: ideal_gas.rs  mod.rs  residual.rs
crates/feos-core/src/parameter/: association.rs  chemical_record.rs  database.rs  identifier.rs  mod.rs  model_record.rs  segment.rs
crates/feos-core/src/parameter_fit/: mod.rs  properties.rs
crates/feos-core/src/phase_equilibria/: bubble_dew.rs  mod.rs  multi_model_phase_equilibrium.rs  phase_diagram_binary.rs  phase_diagram_pure.rs  phase_envelope.rs  px_flashes.rs  stability_analysis.rs  tp_flash.rs  vle_pure.rs
crates/feos-core/src/python/: mod.rs
crates/feos-core/src/state/: builder.rs  cache.rs  composition.rs  critical_point.rs  mod.rs  properties.rs  residual_properties.rs  statevec.rs
crates/feos-core/tests/: parameters.rs  test_parameters1.json  test_parameters2.json  test_parameters_binary.json
crates/feos-derive/: Cargo.toml  README.md  license-mit
crates/feos-derive/src/: dft.rs  functional_contribution.rs  ideal_gas.rs  lib.rs  residual.rs  subset.rs
crates/feos-dft/: CHANGELOG.md  Cargo.toml  README.md  license-apache
crates/feos-dft/src/: functional.rs  functional_contribution.rs  geometry.rs  ideal_chain_contribution.rs  lib.rs  pdgt.rs  solver.rs  weight_functions.rs
crates/feos-dft/src/adsorption/: external_potential.rs  fea_potential.rs  mod.rs  pore.rs  pore2d.rs  pore3d.rs
crates/feos-dft/src/convolver/: mod.rs  periodic_convolver.rs  transform.rs
crates/feos-dft/src/interface/: mod.rs  surface_tension_diagram.rs
crates/feos-dft/src/profile/: mod.rs  properties.rs
crates/feos-dft/src/python/: solver.rs
crates/feos-dft/src/solvation/: mod.rs  pair_correlation.rs  solvation_profile.rs
crates/feos/benches/: README.md  contributions.rs  dft_pore.rs  dual_numbers.rs  dual_numbers_saftvrmie.rs  dual_static_vs_dynamic.rs  state_creation.rs  state_properties.rs
crates/feos/src/: eos.rs  lib.rs
crates/feos/src/association/: dft.rs  mod.rs
crates/feos/tests/: main.rs
feos-benchmarks/: Cargo.toml
feos-benchmarks/benches/: contributions.rs  dft_pore.rs  dual_numbers.rs  state_creation.rs  state_properties.rs
feos-core/: CHANGELOG.md  Cargo.toml  README.md
feos-core/src/: cubic.rs  density_iteration.rs  equation_of_state.rs  errors.rs  joback.rs  lib.rs  si.rs
feos-core/src/equation_of_state/: __ideal_gas.rs  debroglie.rs  helmholtz_energy.rs  ideal_gas.rs  mod.rs  residual.rs
feos-core/src/parameter/: chemical_record.rs  identifier.rs  mod.rs  model_record.rs  segment.rs
feos-core/src/phase_equilibria/: bubble_dew.rs  mod.rs  phase_diagram_binary.rs  phase_diagram_pure.rs  phase_envelope.rs  stability_analysis.rs  tp_flash.rs  vle_pure.rs
feos-core/src/python/: cubic.rs  equation_of_state.rs  fragmentation.rs  joback.rs  mod.rs  parameter.rs  phase_equilibria.rs  state.rs  statehd.rs  user_defined.rs
feos-core/src/si/: array.rs  fmt.rs  mod.rs  ops.rs  python.rs
feos-core/src/state/: builder.rs  cache.rs  critical_point.rs  mod.rs  properties.rs  residual_properties.rs  statevec.rs
feos-core/tests/: parameters.rs  test_parameters1.json  test_parameters2.json
feos-derive/: Cargo.toml  README.md
feos-derive/src/: components.rs  dft.rs  eos.rs  functional_contribution.rs  ideal_gas.rs  lib.rs  residual.rs
feos-dft/: CHANGELOG.md  Cargo.toml  README.md  license-apache  license-mit
feos-dft/src/: functional.rs  functional_contribution.rs  fundamental_measure_theory.rs  geometry.rs  ideal_chain_contribution.rs  lib.rs  pdgt.rs  profile.rs  solver.rs  weight_functions.rs
feos-dft/src/adsorption/: external_potential.rs  fea_potential.rs  mod.rs  pore.rs  pore2d.rs  pore3d.rs
feos-dft/src/convolver/: mod.rs  periodic_convolver.rs  transform.rs
feos-dft/src/interface/: mod.rs  surface_tension_diagram.rs
feos-dft/src/profile/: mod.rs  properties.rs
feos-dft/src/python/: mod.rs  profile.rs  solvation.rs  solver.rs
feos-dft/src/solvation/: mod.rs  pair_correlation.rs  solvation_profile.rs
feos-saft/: Cargo.toml  license-mit
feos-saft/src/: hard_sphere.rs  lib.rs
feos-saft/src/association/: dft.rs  mod.rs  python.rs
feos-saft/src/hard_sphere/: dft.rs  mod.rs
py-feos/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
py-feos/docs/: index.md
py-feos/docs/_static/: custom_css.css  latte.html  mocha.html  slate.scss
py-feos/docs/api/: index.md  misc.md
py-feos/docs/examples/: basic-properties.md  parameter-loading.md
py-feos/docs/getting-started/: concepts.md  installation.md  quickstart.md
py-feos/docs/hooks/: typst_math.py
py-feos/docs/javascript/: mathjax.js
py-feos/docs/user-guide/: working-with-states.md
py-feos/feos/: __init__.py  dft.py  estimator.py  parameters.py
py-feos/src/: error.rs  estimator.rs  ideal_gas.rs  lib.rs  phase_equilibria.rs  residual.rs  state.rs  user_defined.rs
py-feos/src/ad/: dataset.rs  mod.rs  regressor.rs  solver.rs
py-feos/src/dft/: mod.rs  profile.rs  solvation.rs  solver.rs
py-feos/src/eos/: constructors.rs  epcsaft.rs  gc_pcsaft.rs  mod.rs  multiparameter.rs  pcsaft.rs  pets.rs  saftvrmie.rs  saftvrqmie.rs  uvcs.rs  uvtheory.rs
py-feos/src/parameter/: chemical_record.rs  fragmentation.rs  identifier.rs  mod.rs  model_record.rs  segment.rs
py-feos/src/state/: mod.rs  state.rs
(+860 files in other folders)
