[package]
name = "feos"
version = "0.8.0"
authors = [
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
    "Philipp Rehner <prehner@ethz.ch>",
]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "FeOs - A framework for equations of state and classical density functional theory."
homepage = "https://github.com/feos-org"
repository = "https://github.com/feos-org/feos"
keywords = [
    "physics",
    "thermodynamics",
    "equations_of_state",
    "phase_equilibria",
]
categories = ["science"]

[package.metadata.docs.rs]
features = ["all_models", "rayon"]
rustdoc-args = ["--html-in-header", "./docs-header.html"]

[workspace]
members = ["feos-core", "feos-dft", "feos-derive", "feos-benchmarks"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
quantity = "0.10"
num-dual = "0.11"
feos-core = { version = "0.8", path = "feos-core" }
feos-dft = { version = "0.8", path = "feos-dft", optional = true }
feos-derive = { version = "0.6", path = "feos-derive" }
numpy = { version = "0.23", optional = true }
ndarray = { version = "0.16", features = ["approx"] }
petgraph = { version = "0.7", optional = true }
thiserror = "2.0"
conv = "0.3"
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.0"
rayon = { version = "1.7", optional = true }
itertools = "0.14"
typenum = "1.16"

[dependencies.pyo3]
version = "0.23"
features = ["extension-module", "abi3", "abi3-py39"]
optional = true

[dev-dependencies]
approx = "0.5"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[profile.release-lto-thin]
inherits = "release"
lto = "thin"
codegen-units = 1


[features]
default = []
dft = ["feos-dft", "petgraph"]
estimator = []
association = []
pcsaft = ["association"]
epcsaft = ["association"]
gc_pcsaft = ["association"]
uvtheory = []
pets = []
saftvrqmie = []
saftvrmie = []
rayon = ["dep:rayon", "ndarray/rayon", "feos-core/rayon", "feos-dft?/rayon"]
python = [
    "pyo3",
    "numpy",
    "quantity/python_numpy",
    "feos-core/python",
    "feos-dft?/python",
    "rayon",
]
all_models = [
    "dft",
    "estimator",
    "pcsaft",
    "epcsaft",
    "gc_pcsaft",
    "uvtheory",
    "pets",
    "saftvrqmie",
    "saftvrmie",
]
