[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/feos"]

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = [
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
    "Philipp Rehner <prehner@ethz.ch>",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/feos-org"
repository = "https://github.com/feos-org/feos"
keywords = [
    "physics",
    "thermodynamics",
    "equations_of_state",
    "phase_equilibria",
]
categories = ["science"]

[workspace.dependencies]
quantity = "0.10"
num-dual = "0.11"
ndarray = { version = "0.16", features = ["approx"] }
nalgebra = "0.33"
thiserror = "2.0"
conv = "0.3"
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.0"
itertools = "0.14"
typenum = "1.16"

feos-core = { version = "0.8", path = "crates/feos-core" }
feos-derive = { version = "0.6", path = "crates/feos-derive" }


[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[profile.release-lto-thin]
inherits = "release"
lto = "thin"
codegen-units = 1
