[workspace]
resolver = "2"
members = ["crates/*", "py-feos"]
default-members = ["crates/feos"]

[workspace.package]
version = "0.9.2"
edition = "2024"
authors = [
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
    "Philipp Rehner <prehner@ethz.ch>",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/feos-org"
repository = "https://github.com/feos-org/feos"
keywords = [
    "physics",
    "thermodynamics",
    "equations_of_state",
    "phase_equilibria",
]
categories = ["science"]

[workspace.dependencies]
quantity = "0.12"
num-dual = "0.13"
ndarray = "0.17"
nalgebra = "0.34"
thiserror = "2.0"
conv = "0.3"
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.0"
itertools = "0.14"
typenum = "1.16"
rayon = "1.11"
petgraph = "0.8"
rustdct = "0.7"
rustfft = "6.0"
libm = "0.2"
gauss-quad = "0.2"
approx = "0.5"
criterion = "0.8"
paste = "1.0"

feos-core = { version = "0.9", path = "crates/feos-core" }
feos-dft = { version = "0.9", path = "crates/feos-dft" }
feos-derive = { version = "0.9", path = "crates/feos-derive" }
feos = { version = "0.9", path = "crates/feos" }

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[profile.release-lto-thin]
inherits = "release"
lto = "thin"
codegen-units = 1
