[package]
name = "feos-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
feos = { path = "..", features = ["pcsaft", "saftvrmie", "gc_pcsaft", "dft"] }
quantity = "0.10"
num-dual = "0.11"
ndarray = "0.16"
typenum = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "state_properties"
harness = false

[[bench]]
name = "state_creation"
harness = false

[[bench]]
name = "dual_numbers"
harness = false

[[bench]]
name = "dual_numbers_saftvrmie"
harness = false

[[bench]]
name = "contributions"
harness = false

[[bench]]
name = "dft_pore"
harness = false
