[package]
name = "feos-core"
version = "0.4.2"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
           "Philipp Rehner <prehner@ethz.ch"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Core traits and functionalities for the `feos` project."
homepage = "https://github.com/feos-org"
readme = "README.md"
repository = "https://github.com/feos-org/feos"
keywords = ["physics", "thermodynamics", "equations_of_state", "phase_equilibria"]
categories = ["science"]
workspace = ".."

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]
features = [ "rayon" ]

[dependencies]
quantity = "0.6"
num-dual = { version = "0.6", features = ["linalg"] }
ndarray = { version = "0.15", features = ["serde"] }
num-traits = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.8"
conv = "0.3"
numpy = { version = "0.18", optional = true }
pyo3 = { version = "0.18", optional = true }
rayon = { version = "1.5", optional = true }

[dev-dependencies]
approx = "0.4"

[features]
default = []
rayon = ["dep:rayon", "ndarray/rayon"]
python = ["pyo3", "numpy", "quantity/python", "num-dual/python", "rayon"]
