[package]
name = "feos-core"
version = "0.8.0"
authors = [
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
    "Philipp Rehner <prehner@ethz.ch",
]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Core traits and functionalities for the `feos` project."
homepage = "https://github.com/feos-org"
readme = "README.md"
repository = "https://github.com/feos-org/feos"
keywords = [
    "physics",
    "thermodynamics",
    "equations_of_state",
    "phase_equilibria",
]
categories = ["science"]
workspace = ".."

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
features = ["rayon"]

[dependencies]
quantity = { version = "0.10", features = ["approx", "ndarray"] }
num-dual = { version = "0.11", features = ["linalg"] }
ndarray = { version = "0.16", features = ["serde", "approx"] }
nalgebra = "0.33"
num-traits = "0.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
conv = "0.3"
numpy = { version = "0.23", optional = true }
pyo3 = { version = "0.23", features = ["multiple-pymethods"], optional = true }
rayon = { version = "1.5", optional = true }
typenum = "1.16"
approx = "0.5"
regex = "1.9"
pythonize = { version = "0.23", optional = true }
itertools = { version = "0.14", optional = true }

[features]
default = []
rayon = ["dep:rayon", "ndarray/rayon"]
python = [
    "pyo3",
    "numpy",
    "pythonize",
    "itertools",
    "quantity/python",
    "num-dual/python_macro",
    "rayon",
]
