[package]
name = "feos-dft"
version = "0.7.0"
authors = [
    "Philipp Rehner <prehner@ethz.ch>",
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generic classical DFT implementations for the `feos` project."
homepage = "https://github.com/feos-org"
readme = "README.md"
repository = "https://github.com/feos-org/feos"
keywords = ["physics", "thermodynamics", "interfaces", "adsorption"]
categories = ["science"]
exclude = ["/.github/*", "*.ipynb"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
features = ["rayon"]

[dependencies]
quantity = "0.9"
num-dual = "0.10"
feos-core = { version = "0.7", path = "../feos-core" }
ndarray = "0.16"
nalgebra = "0.33"
rustdct = "0.7"
rustfft = "6.0"
num-traits = "0.2"
libm = "0.2"
gauss-quad = { version = "0.2", optional = true }
petgraph = "0.6"
typenum = "1.16"
numpy = { version = "0.22", optional = true }
pyo3 = { version = "0.22", optional = true }

[features]
default = []
rayon = ["gauss-quad", "ndarray/rayon"]
python = ["pyo3", "numpy", "quantity/python", "feos-core/python", "rayon"]
