[package]
name = "py_feos"
version = "0.1.0"
edition = "2021"

[lib]
name = "feos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = [
    "extension-module",
    "abi3-py39",
    "multiple-pymethods",
    "indexmap"
] }
pythonize = "0.25"
#numpy = { version = "0.26" }
numpy = { git = "https://github.com/PyO3/rust-numpy" }

quantity = { workspace = true, features = ["python", "python_numpy"] }
num-dual = { workspace = true, features = ["python_macro"] }
nalgebra = { workspace = true }
ndarray = { workspace = true }
petgraph = { workspace = true, optional = true }
thiserror = { workspace = true }
conv = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true, optional = true }
itertools = { workspace = true }
typenum = { workspace = true }
paste = { workspace = true }

feos = { workspace = true }
feos-core = { workspace = true, features = ["ndarray"] }
feos-derive = { workspace = true }
feos-dft = { workspace = true, optional = true }

[features]
default = []
dft = ["feos/dft", "feos-dft", "petgraph", "rayon"]
pcsaft = ["feos/pcsaft"]
epcsaft = ["feos/epcsaft"]
gc_pcsaft = ["feos/gc_pcsaft"]
uvtheory = ["feos/uvtheory"]
pets = ["feos/pets"]
saftvrqmie = ["feos/saftvrqmie"]
saftvrmie = ["feos/saftvrmie"]
rayon = ["dep:rayon", "ndarray/rayon", "feos-core/rayon", "feos-dft?/rayon"]
ad = ["feos-core/rayon"]
all_models = [
    "dft",
    "pcsaft",
    "epcsaft",
    "gc_pcsaft",
    "uvtheory",
    "pets",
    "saftvrqmie",
    "saftvrmie",
]
