[project]
name = "feos"
dynamic = [
    "version",
    "description",
    "readme",
    "urls",
    "authors",
    "license",
    "keywords",
]
requires-python = ">=3.10"
dependencies = [
    "si_units>=0.11.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["all_models"]