[project]
name = "feos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gernot Bauer", email = "bauer@itt.uni-stuttgart.de" },
    { name = "Philipp Rehner", email = "prehner@ethz.ch"}
]
requires-python = ">=3.12"
dependencies = [
    "si_units>=0.11.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["all_models"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "maturin>=1.8.3",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "D", # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google" # https://google.github.io/styleguide/pyguide.html#38-comments-and-docstrings

[tool.ruff.lint.pycodestyle]
max-doc-length = 80
