[package]
name = "feos-ad"
edition.workspace = true
version = "0.2.3"
authors = ["Philipp Rehner <prehner@ethz.ch"]
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FeOs-AD - Implicit automatic differentiation of equations of state and phase equilibria."

[dependencies]
num-dual = { workspace = true }
quantity = { workspace = true, features = ["num-dual"] }
nalgebra = { workspace = true }
feos-core = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
feos = { workspace = true }
approx = { workspace = true }
quantity = { workspace = true, features = ["num-dual", "approx"] }

[features]
default = []
pcsaft = ["feos/pcsaft"]
gc_pcsaft = ["feos/gc_pcsaft"]
parameter_fit = ["ndarray/rayon"]
