[package]
name = "feos-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits and functionalities for the `feos` project."

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
features = ["rayon"]

[dependencies]
quantity = { workspace = true, features = ["approx", "ndarray"] }
num-dual = { workspace = true, features = ["linalg"] }
ndarray = { workspace = true, features = ["serde", "approx"] }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
indexmap = { workspace = true, features = ["serde"] }
conv = { workspace = true }
rayon = { version = "1.5", optional = true }
typenum = { workspace = true }
approx = "0.5"
regex = "1.9"

[features]
default = []
rayon = ["dep:rayon", "ndarray/rayon"]
