[package]
name = "feos-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits and functionalities for the `feos` project."

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
features = ["rayon"]

[dependencies]
quantity = { workspace = true, features = ["ndarray"] }
num-dual = { workspace = true, features = ["linalg"] }
ndarray = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
indexmap = { workspace = true, features = ["serde"] }
rayon = { workspace = true, optional = true }
typenum = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
quantity = { workspace = true, features = ["approx"] }

[features]
default = []
rayon = ["dep:rayon", "ndarray/rayon"]
