[package]
name = "feos-derive"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Macros for the Residual and HelmholtzEnergyFunctional traits in FeOs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"
