[package]
name = "feos-dft"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic classical DFT implementations for the `feos` project."
exclude = ["/.github/*", "*.ipynb"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
features = ["rayon"]

[dependencies]
quantity = { workspace = true }
num-dual = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
rustdct = { workspace = true }
rustfft = { workspace = true }
num-traits = { workspace = true }
libm = { workspace = true }
gauss-quad = { workspace = true, optional = true }
petgraph = { workspace = true }
typenum = { workspace = true }

feos-core = { workspace = true }

[features]
default = []
rayon = ["gauss-quad", "ndarray/rayon"]
