[package]
name = "feos"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FeOs - A framework for equations of state and classical density functional theory."

[dependencies]
quantity = { workspace = true }
num-dual = { workspace = true }
ndarray = { workspace = true, optional = true }
nalgebra = { workspace = true }
petgraph = { workspace = true, optional = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true, optional = true }
itertools = { workspace = true }
typenum = { workspace = true }

feos-core = { workspace = true }
feos-derive = { workspace = true, optional = true }
feos-dft = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
quantity = { workspace = true, features = ["approx"] }
criterion = { workspace = true }

[features]
default = []
dft = ["feos-dft", "petgraph", "ndarray", "num-dual/ndarray", "feos-derive"]
association = []
pcsaft = ["association"]
epcsaft = ["association"]
gc_pcsaft = ["association"]
uvtheory = []
pets = []
saftvrqmie = []
saftvrmie = ["association"]
multiparameter = []
rayon = ["dep:rayon", "ndarray/rayon", "feos-core/rayon", "feos-dft?/rayon"]
all_models = [
    "dft",
    "pcsaft",
    "epcsaft",
    "gc_pcsaft",
    "uvtheory",
    "pets",
    "saftvrqmie",
    "saftvrmie",
    "multiparameter"
]

[[bench]]
name = "state_properties"
harness = false
required-features = ["pcsaft"]

[[bench]]
name = "state_creation"
harness = false
required-features = ["pcsaft"]

[[bench]]
name = "dual_numbers"
harness = false
required-features = ["pcsaft"]

[[bench]]
name = "dual_numbers_saftvrmie"
required-features = ["saftvrmie"]
harness = false

[[bench]]
name = "contributions"
harness = false
required-features = ["pcsaft"]

[[bench]]
name = "dft_pore"
harness = false
required-features = ["pcsaft", "gc_pcsaft", "dft"]
